fix: fixes lyaout on small devices

--- a/docs/.vuepress/styles/variables.scss
+++ b/docs/.vuepress/styles/variables.scss
@@ -18,11 +18,12 @@ $root__section--margin-bottom: 36px / $root__base-size * 1rem;
 // ----------------------------------------------------------------------------- Breakpoints
 $root__breakpoints: (
   xs: 0px,
-  sm: 470px,
+  sm: 600px,
   md: 960px,
   lg: 1280px,
   xl: 1920px
 );
+
 
 $root__breakpoint--keys: ('xs', 'sm', 'md', 'lg', 'xl');
 
