--- a/docs/.vuepress/theme/Layout.styles.scss
+++ b/docs/.vuepress/theme/Layout.styles.scss
@@ -182,12 +182,6 @@
     padding: 0 rem-size(0px) rem-size(5px);
   }
 
-  .root__application-bar-items {
-    position: absolute;
-    right: 0;
-    align-items: center;
-  }
-
   .root__page-title {
     color: var(--root__color--primary);
     border-bottom: 2px solid var(--root__color--border);
@@ -259,6 +253,13 @@
 
     .root__application-bar .v-toolbar__content {
       padding: 0 rem-size(20px);
+      }
+
+    .root__application-bar-items {
+      position: absolute;
+      top: 0;
+      right: 0;
+      align-items: center;
     }
 
     .root__application-bar-title {
@@ -297,7 +298,7 @@
 
     .root__language-select--application-bar {
       display: none;
-    }
+      }
   }
 
   @include breakpoint-greater('sm') {
